# -*- coding: utf-8 -*-
[metadata]
name = unicorn-multiverse
version = 0.0.3
author = Philip Howard
author_email = phil@gadgetoid.com
description = Multi USB serial display driver
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Raspberry Pi Pico
url = https://www.github.com/gadgetoid/gu-multiverse
project_urls =
	GitHub=https://www.github.com/gadgetoid/gu-multiverse
license = MIT
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
classifiers =
	Development Status :: 4 - Beta
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: MIT License
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Topic :: Software Development
	Topic :: Software Development :: Libraries
	Topic :: System :: Hardware

[options]
python_requires = >= 3.7
packages = multiverse
install_requires = 
    numpy
    pyserial
